# fingers

./: Cargo.toml  README.md
models/gesture_model/: canned_gesture_classifier.onnx  gesture_embedder.onnx  tflite_to_onnx.py
models/gesture_model/tflite/: hand_gesture_recognizer.task
src/: controller.rs  detector.rs  main.rs  sensor.rs
